# serializer version: 1
# name: TestUpdateEligibilityView.test_standalone_no_valid_eligibility_diagnosis[0]
  '''
  <main class="s-main" id="main" role="main">
              <div aria-atomic="true" aria-live="polite" class="toast-container">
  
  </div>
  
              <section class="s-title-02">
                  <div class="s-title-02__container container">
                      <div class="s-title-02__row row">
                          <div class="s-title-02__col col-12">
                              
                              
      
  <div class="c-title">
      <div class="c-title__main">
              <h1>
                  
                      Valider
                  
                  l'éligibilité de Jane DOE
              </h1>
          </div>
      
      
  </div>
  
  
                              
                                  
  
  
  
                              
                              
                          </div>
                      </div>
                  </div>
              </section>
  
              
      <section class="s-section">
          <div class="container">
              <div class="row">
                  <div class="col-12 col-lg-8">
                      <div class="c-form">
  
                          
                          
  
                          
  
                          <div class="c-info mb-3">
                              <button class="c-info__summary">
                                  <span>Pour valider l'éligibilité IAE du candidat</span>
                              </button>
                              <div class="c-info__detail">
                                  <ul>
                                      <li>
                                          Veuillez vous assurer d’avoir réalisé un diagnostic socio-professionnel dans le cadre d'un entretien individuel.
                                          Vous pouvez vous appuyer sur le document
                                          <a aria-label="Diagnostic socio-professionnel des candidats (ouverture dans un nouvel onglet)" class="has-external-link" href="https://communaute.inclusion.gouv.fr/surveys/dsp/create/?proconnect_login=true" rel="noreferrer noopener" target="_blank">diagnostic socio-professionnel de référence</a>.
                                      </li>
                                      <li>Il est recommandé de sélectionner le(s) critères(s) administratifs d’éligibilité correspondants.</li>
                                  </ul>
                              </div>
                          </div>
  
                          <form method="post">
                              <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
  
                              <div class="">
                                  <fieldset>
                                      <legend class="h3">Critères administratifs de niveau 1</legend>
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input aria-describedby="id_level_1_1_helptext" class="form-check-input" id="id_level_1_1" name="level_1_1" type="checkbox"/><label class="form-check-label" for="id_level_1_1">Bénéficiaire du RSA</label><div class="form-text" id="id_level_1_1_helptext">Revenu de solidarité active</div>
  </div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input aria-describedby="id_level_1_2_helptext" class="form-check-input" id="id_level_1_2" name="level_1_2" type="checkbox"/><label class="form-check-label" for="id_level_1_2">Allocataire ASS</label><div class="form-text" id="id_level_1_2_helptext">Allocation de solidarité spécifique</div>
  </div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input aria-describedby="id_level_1_3_helptext" class="form-check-input" id="id_level_1_3" name="level_1_3" type="checkbox"/><label class="form-check-label" for="id_level_1_3">Allocataire AAH</label><div class="form-text" id="id_level_1_3_helptext">Allocation aux adultes handicapés</div>
  </div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input aria-describedby="id_level_1_4_helptext" class="form-check-input" id="id_level_1_4" name="level_1_4" type="checkbox"/><label class="form-check-label" for="id_level_1_4">DETLD (+ 24 mois)</label><div class="form-text" id="id_level_1_4_helptext">Demandeur d'emploi de très longue durée (inscrit à France Travail)</div>
  </div></div>
                                          
                                      
                                          
                                      
                                          
                                      
                                          
                                      
                                          
                                      
                                          
                                      
                                          
                                      
                                          
                                      
                                          
                                      
                                          
                                      
                                          
                                      
                                          
                                      
                                          
                                      
                                          
                                      
                                          
                                      
                                  </fieldset>
  
                                  <fieldset>
                                      <legend class="h3">Critères administratifs de niveau 2</legend>
                                      
                                          
                                      
                                          
                                      
                                          
                                      
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input class="form-check-input" id="id_level_2_5" name="level_2_5" type="checkbox"/><label class="form-check-label" for="id_level_2_5">Niveau d'étude 3 (CAP, BEP) ou infra</label></div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input class="form-check-input" id="id_level_2_6" name="level_2_6" type="checkbox"/><label class="form-check-label" for="id_level_2_6">Senior (+50 ans)</label></div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input class="form-check-input" id="id_level_2_7" name="level_2_7" type="checkbox"/><label class="form-check-label" for="id_level_2_7">Jeune (-26 ans)</label></div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input aria-describedby="id_level_2_8_helptext" class="form-check-input" id="id_level_2_8" name="level_2_8" type="checkbox"/><label class="form-check-label" for="id_level_2_8">Sortant de l'ASE</label><div class="form-text" id="id_level_2_8_helptext">Aide sociale à l'enfance</div>
  </div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input aria-describedby="id_level_2_9_helptext" class="form-check-input" id="id_level_2_9" name="level_2_9" type="checkbox"/><label class="form-check-label" for="id_level_2_9">DELD (12-24 mois)</label><div class="form-text" id="id_level_2_9_helptext">Demandeur d'emploi de longue durée (inscrit à France Travail)</div>
  </div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input class="form-check-input" id="id_level_2_10" name="level_2_10" type="checkbox"/><label class="form-check-label" for="id_level_2_10">Travailleur handicapé</label></div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input class="form-check-input" id="id_level_2_11" name="level_2_11" type="checkbox"/><label class="form-check-label" for="id_level_2_11">Parent isolé</label></div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input class="form-check-input" id="id_level_2_12" name="level_2_12" type="checkbox"/><label class="form-check-label" for="id_level_2_12">Personne sans hébergement ou hébergée ou ayant un parcours de rue</label></div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input class="form-check-input" id="id_level_2_13" name="level_2_13" type="checkbox"/><label class="form-check-label" for="id_level_2_13">Réfugié statutaire, bénéficiaire d'une protection temporaire, protégé subsidiaire ou demandeur d'asile</label></div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input aria-describedby="id_level_2_14_helptext" class="form-check-input" id="id_level_2_14" name="level_2_14" type="checkbox"/><label class="form-check-label" for="id_level_2_14">Résident ZRR</label><div class="form-text" id="id_level_2_14_helptext">Zone de revitalisation rurale</div>
  </div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input aria-describedby="id_level_2_15_helptext" class="form-check-input" id="id_level_2_15" name="level_2_15" type="checkbox"/><label class="form-check-label" for="id_level_2_15">Résident QPV</label><div class="form-text" id="id_level_2_15_helptext">Quartier prioritaire de la politique de la ville</div>
  </div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input class="form-check-input" id="id_level_2_16" name="level_2_16" type="checkbox"/><label class="form-check-label" for="id_level_2_16">Sortant de détention ou personne placée sous main de justice</label></div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input class="form-check-input" id="id_level_2_17" name="level_2_17" type="checkbox"/><label class="form-check-label" for="id_level_2_17">Maîtrise de la langue française</label></div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input class="form-check-input" id="id_level_2_18" name="level_2_18" type="checkbox"/><label class="form-check-label" for="id_level_2_18">Mobilité</label></div></div>
                                          
                                      
                                  </fieldset>
                                  <input data-shroud-input="" name="shrouded" type="hidden" value="1"/>
                              </div>
  
                              
  
  <div class="row">
      <div class="col-12">
          <hr class="mb-3"/>
          <small class="d-inline-block mb-3">* champs obligatoires</small>
          <div class="form-row align-items-center justify-content-end gx-3">
              <div class="form-group col-12 col-lg order-3 order-lg-1">
                  
                      <a aria-label="Annuler la saisie de ce formulaire" class="btn btn-link btn-ico ps-lg-0 w-100 w-lg-auto" href="/job-seekers/list">
                          <i aria-hidden="true" class="ri-close-line ri-lg"></i>
                          <span>Annuler</span>
                      </a>
                  
              </div>
              
              <div class="form-group col col-lg-auto order-2 order-lg-3">
                  
                      <button aria-label="Passer à l’étape suivante" class="btn btn-block btn-primary" type="submit">
                          <span>Valider</span>
                      </button>
                  
              </div>
          </div>
      </div>
  </div>
  
  
  
                          </form>
                      </div>
                  </div>
              </div>
          </div>
      </section>
  
          </main>
  '''
# ---
# name: TestUpdateEligibilityView.test_standalone_valid_eligibility_diagnosis
  '''
  <main class="s-main" id="main" role="main">
              <div aria-atomic="true" aria-live="polite" class="toast-container">
  
  </div>
  
              <section class="s-title-02">
                  <div class="s-title-02__container container">
                      <div class="s-title-02__row row">
                          <div class="s-title-02__col col-12">
                              
                              
      
  <div class="c-title">
      <div class="c-title__main">
              <h1>
                  
                      Mettre à jour
                  
                  l'éligibilité de Jane DOE
              </h1>
          </div>
      
      
  </div>
  
  
                              
                                  
  
  
  
                              
                              
                          </div>
                      </div>
                  </div>
              </section>
  
              
      <section class="s-section">
          <div class="container">
              <div class="row">
                  <div class="col-12 col-lg-8">
                      <div class="c-form">
  
                          
                          
                              <div class="mb-5">
                                  <p>L’éligibilité à l'IAE du candidat a été validée par :</p>
                                  <p class="text-tertiary fw-bold">Pres. Org.</p>
                              </div>
  
                              <div class="alert alert-info mb-5" role="status">
                                  <div class="row">
                                      <div class="col-auto pe-0">
                                          <i aria-hidden="true" class="ri-information-line ri-xl text-info"></i>
                                      </div>
                                      <div class="col">
                                          <p class="mb-2">
                                              <strong>Date de fin de validité du diagnostic : 22/09/2025</strong>
                                          </p>
                                          <p>
                                              Tant que l’éligibilité IAE est valide, vous n’avez rien à faire. Si vous souhaitez la mettre à jour, sa validité sera prolongée jusqu'au 22/09/2025.
                                          </p>
                                          <button class="btn btn-link text-start p-0" data-shroud-clear="">Mettre à jour l’éligibilité</button>
                                      </div>
                                  </div>
                              </div>
                          
  
                          
  
                          <div class="c-info mb-3">
                              <button class="c-info__summary">
                                  <span>Pour valider l'éligibilité IAE du candidat</span>
                              </button>
                              <div class="c-info__detail">
                                  <ul>
                                      <li>
                                          Veuillez vous assurer d’avoir réalisé un diagnostic socio-professionnel dans le cadre d'un entretien individuel.
                                          Vous pouvez vous appuyer sur le document
                                          <a aria-label="Diagnostic socio-professionnel des candidats (ouverture dans un nouvel onglet)" class="has-external-link" href="https://communaute.inclusion.gouv.fr/surveys/dsp/create/?proconnect_login=true" rel="noreferrer noopener" target="_blank">diagnostic socio-professionnel de référence</a>.
                                      </li>
                                      <li>Il est recommandé de sélectionner le(s) critères(s) administratifs d’éligibilité correspondants.</li>
                                  </ul>
                              </div>
                          </div>
  
                          <form method="post">
                              <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
  
                              <div class="js-shroud">
                                  <fieldset>
                                      <legend class="h3">Critères administratifs de niveau 1</legend>
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input aria-describedby="id_level_1_1_helptext" class="form-check-input" id="id_level_1_1" name="level_1_1" type="checkbox"/><label class="form-check-label" for="id_level_1_1">Bénéficiaire du RSA</label><div class="form-text" id="id_level_1_1_helptext">Revenu de solidarité active</div>
  </div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input aria-describedby="id_level_1_2_helptext" class="form-check-input" id="id_level_1_2" name="level_1_2" type="checkbox"/><label class="form-check-label" for="id_level_1_2">Allocataire ASS</label><div class="form-text" id="id_level_1_2_helptext">Allocation de solidarité spécifique</div>
  </div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input aria-describedby="id_level_1_3_helptext" class="form-check-input" id="id_level_1_3" name="level_1_3" type="checkbox"/><label class="form-check-label" for="id_level_1_3">Allocataire AAH</label><div class="form-text" id="id_level_1_3_helptext">Allocation aux adultes handicapés</div>
  </div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input aria-describedby="id_level_1_4_helptext" class="form-check-input" id="id_level_1_4" name="level_1_4" type="checkbox"/><label class="form-check-label" for="id_level_1_4">DETLD (+ 24 mois)</label><div class="form-text" id="id_level_1_4_helptext">Demandeur d'emploi de très longue durée (inscrit à France Travail)</div>
  </div></div>
                                          
                                      
                                          
                                      
                                          
                                      
                                          
                                      
                                          
                                      
                                          
                                      
                                          
                                      
                                          
                                      
                                          
                                      
                                          
                                      
                                          
                                      
                                          
                                      
                                          
                                      
                                          
                                      
                                          
                                      
                                  </fieldset>
  
                                  <fieldset>
                                      <legend class="h3">Critères administratifs de niveau 2</legend>
                                      
                                          
                                      
                                          
                                      
                                          
                                      
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input class="form-check-input" id="id_level_2_5" name="level_2_5" type="checkbox"/><label class="form-check-label" for="id_level_2_5">Niveau d'étude 3 (CAP, BEP) ou infra</label></div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input class="form-check-input" id="id_level_2_6" name="level_2_6" type="checkbox"/><label class="form-check-label" for="id_level_2_6">Senior (+50 ans)</label></div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input class="form-check-input" id="id_level_2_7" name="level_2_7" type="checkbox"/><label class="form-check-label" for="id_level_2_7">Jeune (-26 ans)</label></div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input aria-describedby="id_level_2_8_helptext" class="form-check-input" id="id_level_2_8" name="level_2_8" type="checkbox"/><label class="form-check-label" for="id_level_2_8">Sortant de l'ASE</label><div class="form-text" id="id_level_2_8_helptext">Aide sociale à l'enfance</div>
  </div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input aria-describedby="id_level_2_9_helptext" class="form-check-input" id="id_level_2_9" name="level_2_9" type="checkbox"/><label class="form-check-label" for="id_level_2_9">DELD (12-24 mois)</label><div class="form-text" id="id_level_2_9_helptext">Demandeur d'emploi de longue durée (inscrit à France Travail)</div>
  </div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input class="form-check-input" id="id_level_2_10" name="level_2_10" type="checkbox"/><label class="form-check-label" for="id_level_2_10">Travailleur handicapé</label></div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input class="form-check-input" id="id_level_2_11" name="level_2_11" type="checkbox"/><label class="form-check-label" for="id_level_2_11">Parent isolé</label></div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input class="form-check-input" id="id_level_2_12" name="level_2_12" type="checkbox"/><label class="form-check-label" for="id_level_2_12">Personne sans hébergement ou hébergée ou ayant un parcours de rue</label></div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input class="form-check-input" id="id_level_2_13" name="level_2_13" type="checkbox"/><label class="form-check-label" for="id_level_2_13">Réfugié statutaire, bénéficiaire d'une protection temporaire, protégé subsidiaire ou demandeur d'asile</label></div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input aria-describedby="id_level_2_14_helptext" class="form-check-input" id="id_level_2_14" name="level_2_14" type="checkbox"/><label class="form-check-label" for="id_level_2_14">Résident ZRR</label><div class="form-text" id="id_level_2_14_helptext">Zone de revitalisation rurale</div>
  </div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input aria-describedby="id_level_2_15_helptext" class="form-check-input" id="id_level_2_15" name="level_2_15" type="checkbox"/><label class="form-check-label" for="id_level_2_15">Résident QPV</label><div class="form-text" id="id_level_2_15_helptext">Quartier prioritaire de la politique de la ville</div>
  </div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input class="form-check-input" id="id_level_2_16" name="level_2_16" type="checkbox"/><label class="form-check-label" for="id_level_2_16">Sortant de détention ou personne placée sous main de justice</label></div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input class="form-check-input" id="id_level_2_17" name="level_2_17" type="checkbox"/><label class="form-check-label" for="id_level_2_17">Maîtrise de la langue française</label></div></div>
                                          
                                      
                                          
                                              <div class="form-group"><div class="form-check"><input class="form-check-input" id="id_level_2_18" name="level_2_18" type="checkbox"/><label class="form-check-label" for="id_level_2_18">Mobilité</label></div></div>
                                          
                                      
                                  </fieldset>
                                  <input data-shroud-input="" name="shrouded" type="hidden" value="1"/>
                              </div>
  
                              
  
  <div class="row">
      <div class="col-12">
          <hr class="mb-3"/>
          <small class="d-inline-block mb-3">* champs obligatoires</small>
          <div class="form-row align-items-center justify-content-end gx-3">
              <div class="form-group col-12 col-lg order-3 order-lg-1">
                  
                      <a aria-label="Annuler la saisie de ce formulaire" class="btn btn-link btn-ico ps-lg-0 w-100 w-lg-auto" href="/job-seekers/list">
                          <i aria-hidden="true" class="ri-close-line ri-lg"></i>
                          <span>Annuler</span>
                      </a>
                  
              </div>
              
              <div class="form-group col col-lg-auto order-2 order-lg-3">
                  
                      <button aria-label="Passer à l’étape suivante" class="btn btn-block btn-primary" type="submit">
                          <span>Valider</span>
                      </button>
                  
              </div>
          </div>
      </div>
  </div>
  
  
  
                          </form>
                      </div>
                  </div>
              </div>
          </div>
      </section>
  
          </main>
  '''
# ---
